-Fixed some warnings.